All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/SM_IOT_Event__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the events sent from devices</description>
    <label>IOT Event</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOT Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>