All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/fields/SM_Alert_Event__c.field-meta.xml
<CustomField>
    <fullName>SM_Alert_Event__c</fullName>
    <description>Event name the alert payload is referring to. (part of payload or URL string)</description>
    <label>Alert Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>