All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/fields/SM_Alert_Source__c.field-meta.xml
<CustomField>
    <fullName>SM_Alert_Source__c</fullName>
    <description>IoT source system/platform (e.g. ThingWorx)</description>
    <label>Alert Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ThingWorx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>