All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/fields/SM_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SM_End_DateTime__c</fullName>
    <description>Date time when the event is completed or errored out</description>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>