All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/fields/SM_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SM_Error_Message__c</fullName>
    <description>Short error message or id indicating error reason</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>