All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/fields/SM_Notify_Alert_Source__c.field-meta.xml
<CustomField>
    <fullName>SM_Notify_Alert_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is alert source system/platform notified? true/false. Defaulted to false.</description>
    <label>Notify Alert Source</label>
    <type>Checkbox</type>
</CustomField>