All_Component_DX/force-app/main/default/objects/SM_IOT_Event__c/fields/SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Status__c</fullName>
    <description>Holds the transaction status with values &apos;Initiated&apos;, &apos;Completed&apos;, &apos;Error&apos;</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>